Fix word break in cards

--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -1,7 +1,7 @@
 .card {
   --spacing-default: var(--spacing-l);
 
-  word-break: break-all;
+  word-break: break-word;
   box-shadow: 0 1px 6px 0 rgb(0 0 0 / 12%);
   overflow: hidden;
   background-color: light-dark(var(--color-gray-100), var(--color-gray-900));
